[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/wall.jpg" type="Texture" id=1]
[ext_resource path="res://assets/nutzen.png" type="Texture" id=2]
[ext_resource path="res://src/Nutzen.gd" type="Script" id=3]
[ext_resource path="res://src/Bouncing.gd" type="Script" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=2]
0/name = "wall.jpg 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 64, 0, 64, 32, 0, 32 )

[sub_resource type="TileSet" id=4]
0/name = "wall.jpg 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=5]
radius = 32.0

[node name="Bouncing" type="Node2D"]
script = ExtResource( 4 )

[node name="Margin" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 2 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, 65535, 0, 0, 16, 0, 0, 131071, 0, 0, 65552, 0, 0, 196607, 0, 0, 131088, 0, 0, 262143, 0, 0, 196624, 0, 0, 327679, 0, 0, 262160, 0, 0, 393215, 0, 0, 327696, 0, 0, 458751, 0, 0, 393232, 0, 0, 524287, 0, 0, 458768, 0, 0, 589823, 0, 0, 524304, 0, 0 )

[node name="BottomMargin" type="TileMap" parent="."]
visible = false
position = Vector2( 0, -43 )
tile_set = SubResource( 4 )
format = 1
tile_data = PoolIntArray( 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0 )

[node name="Nutzen" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( -1008, -88 )
script = ExtResource( 3 )

[node name="Foto" type="Sprite" parent="Nutzen"]
position = Vector2( 1192, 372 )
scale = Vector2( 1.2, 1.24444 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nutzen"]
position = Vector2( 1209.6, 377.6 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="Nutzen"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nutzen/Area2D"]
position = Vector2( 1209.6, 377.6 )
shape = SubResource( 5 )

[node name="Spawn" type="Timer" parent="."]
wait_time = 180.0

[node name="ExistTime" type="Timer" parent="."]
wait_time = 20.0

[connection signal="input_event" from="Nutzen/Area2D" to="Nutzen" method="_on_Area2D_input_event"]
[connection signal="timeout" from="Spawn" to="." method="_on_Spawn_timeout"]
[connection signal="timeout" from="ExistTime" to="." method="_on_ExistTime_timeout"]
